# VRPF

./: CMakeLists.txt  README.md
.srcmodules/: CMakeLists.txt
.srcmodules/arima/: CMakeLists.txt
include/modules/arima/: arima.h
log/: main.ERROR  main.INFO  main.WARNING  master_info_20211025-195606.30001  master_info_20211025-195925.30034  master_warning_20211025-200215.30082
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  TestAll.cpp  functions.cpp  functions.h  functionsTest.cpp
